--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <link rel="stylesheet" href="style.css">
 </head>
 
-<body>
+<body class="fullpage">
     <!-- Navigation -->
      <nav class="navbar navbar-default navbar-fixed-top navbar-shrink">
         <div class="contain">
@@ -161,22 +161,22 @@
           <div class="skillcontainer">
             <h2 class="skillstext">My Skills</h2>
             <div class="grid-row">
-              <div id="skill1">
+              <div id="skill1" class="skillcard">
                 <!-- will fill with JS -->
               </div>
-              <div id="skill2">
+              <div id="skill2" class="skillcard">
                 <!-- will fill with JS -->
               </div>
-              <div id="skill3">
+              <div id="skill3" class="skillcard">
                 <!-- will fill with JS -->
               </div>
-              <div id="skill4">
+              <div id="skill4" class="skillcard">
                 <!-- will fill with JS -->
               </div>
-              <div id="skill5">
+              <div id="skill5" class="skillcard">
                 <!-- will fill with JS -->
               </div>
-              <div id="skill6">
+              <div id="skill6" class="skillcard">
                 <!-- will fill with JS -->
               </div>
             </div>
